# misc

./: .gitmodules
ET_EXEC_TLS/: main.c  run.sh
LD_AUDIT/: .gitignore  audit.c  hello.c  run.sh
LLM/: calm2-7b.py  run.sh
LLM-training/: run.sh  study-in-scarlet.txt  train.py
PREEMPT_RT/: run.sh
aarch64_hello/: dump_qemu_log.sh  run.sh
bandwidth/: .clinerules  .gitignore  CMakeLists.txt  README.md  bandwidth.cc  barrier.cc  barrier.h  barrier_test.cc  build.sh  common.cc  common.h  format.sh  memcpy  memcpy.cc  memcpy_benchmark.cc  memcpy_benchmark.h  memcpy_mt.cc  memcpy_mt_benchmark.cc  memcpy_mt_benchmark.h  mmap.cc  mmap_benchmark.cc  mmap_benchmark.h  pipe.cc  pipe_benchmark.cc  pipe_benchmark.h  run.sh  shm.cc  shm_benchmark.cc  shm_benchmark.h  tcp.cc  tcp_benchmark.cc  tcp_benchmark.h  udp.cc  udp_benchmark.cc  udp_benchmark.h  uds.cc  uds_benchmark.cc  uds_benchmark.h
binary-quiz/: assign.c  run.sh  tls.c
brax_ant/: main.py  run.sh
ccam/: design.md
ccam/mlbox-ccam/: index.html
ccam/mlbox-ccam/src/: App.css  App.tsx
ccam/mlbox-ccam/src/core/: ccam.ts  compiler.ts  core.test.ts
compare-Oz/: .gitignore  func_size.py  run.sh
core/: .gitignore  run.sh
cpu/: README.md
cpu/cpu/: cpu.sv  run.sh  test_cpu.sv
cpu/flop/: flop.sv  run.sh  test_flop.sv
cpu/halfadder/: halfadder.sv  run.sh  test_halfadder  test_halfadder.sv
cpu/popcount/: run.sh
cuda_sample/: CMakeLists.txt  README.md  run.sh
cuda_sample/src/: main.cu
docker-build-profile/: Dockerfile  run.sh
eBPF/: README.md  execsnoop.py  hello.py  m.py  run.sh
ehframe/: main.cc
elf-space/: .gitignore  README.md  convert.c  embed_whitespace_in_hello.c  helloworld2.ws.c  lifegame.c  run.sh  run_in_docker.sh  whitespace.c  whitespace_for_parasite  whitespace_for_parasite.c  whitespace_program_to_embed.h  whitespace_program_to_embed.ws  whitespace_to_embed.c
fix-linux-device-driver-article/: Vagrantfile
fixed-kv-cache/: main.py  run.sh
fx/: main.py  run.sh
ierae-ctf/This_is_warmup/: Dockerfile  docker-compose.yml
ifunc/: foo.c  main.c  run.sh
initialize-externed-variable/: hoge.c  main.c  run.sh
intel-pin/: .gitignore  run.sh
jax/: .gitignore  README.md  format.sh  load_hlo_proto.py  mnist.py  run.sh  test_xla_to_onnx.py  xla_to_onnx.py
jax-tf-onnx/: .gitignore  bn.py  main.py  maxpool.py  resnet.py  run.sh
k8s/: README.md  Vagrantfile  cluster-construction.yaml  cluster.yaml  hosts  kubeadam-install.yaml
kframework/: README.md  run.sh
kframework/MN-Core2/: .gitignore  MN-Core2.k
kframework/lesson02/: .gitignore  lesson-02-a.k
linux-device-file/: .gitignore  README.md  myDeviceDriver.c
linux-device-file/driver_for_article/: read_write.c
llama_from_scratch/: llama.ipynb  llama.py  run.sh
memcpy-threads/: main.cc  run.sh
mlbox-ccam/: index.html  package-lock.json  package.json
mlbox-ccam/src/: App.css  App.tsx  index.css
mlbox-ccam/src/core/: ast.ts  ccam.ts  compiler.ts  core.test.ts  parser.ts  riscv-asm.test.ts  riscv.test.ts  riscv.ts
mncore-challenge/: aplusb.vsm  fam8.vsm  fmul2.vsm  lesseq.vsm  mul7.vsm  plus2.vsm  transpose.vsm
mncore-challenge/judge/: Dockerfile  README.md  hoge.py  judge  judge.bat  t.py
mncore-challenge/judge/Abs/: testcase.vsm
mncore-challenge/judge/Contains/: Contains.py  Contains.vsm  Contains.vsm.back  Contains1.vsm
mncore-challenge/judge/ConvertEndian/: convert_endian.vsm
mncore-challenge/judge/CountUp/: CountUp.vsm  ans.vsm  i2v.py  set.py  testcase.vsm
mncore-challenge/judge/Gather/: gather.vsm
mncore-challenge/judge/Inversion/: Inversion.vsm
mncore-challenge/judge/InversionSmall/: InversionSmall.vsm  testcase.vsm
mncore-challenge/judge/MatrixSquare/: MatrixSquare.vsm  f16x16.py  float_8x8.vsm  matrix_square.vsm  ms2.vsm
mncore-challenge/judge/SquareSum/: squaresum.py
mncore-challenge/judge/TransposeMAB/: TransposeMAB.py  TransposeMAB.vsm  testcase.vsm
mncore-challenge/judge/abs/: abs.vsm
mncore-challenge/judge/convert_endian/: testcase.vsm
mncore-challenge/judge/example/hello_world/: example.vsm  problem.md  testcase.vsm
mncore-challenge/judge/gather/: testcase.vsm
mncore-challenge/judge/judge-py/: converter.py  dtype.py  judge.py  requirements.txt  vsm_here.py
mncore-challenge/judge/matrix_square/: double_4x4.vsm  f16x16.py  float_8x8.vsm  matrix_square.vsm
mncore-challenge/judge/mod3/: mod3.vsm
mncore-challenge/judge/squaresum/: squaresum.vsm  testcase.vsm
mncore-challenge/judge/welcome/: testcase.vsm
ninjatracing/: README.md
popcount-SytemVerilog/: README.md  popcnt.sv  test_popcnt.sv
preprocess_sources/: preprocess_sources.py
pyjit/: .gitignore  CMakeLists.txt  README.md  hello.cc  use_jit.py  use_jit.sh
pypy_log/: power3.py
pyrjit/: Cargo.toml  pyproject.toml  run.sh  use_pyrjit.py
pyrjit/src/: lib.rs
pytorch-send-recv/: main.py
qemu-ubuntu/: run.sh  user-data
qemu_experiment/: .gitignore  README.md  hello.c  run.sh
random-access-vs-linear-access/: compare.c  compare2.c  compare2.cc  run.sh  run_compare.sh  run_compare2.sh
reading-PyTorch/: .gitignore  README.md  torch_compile_test.py
ronnx/: .gitignore  Cargo.toml
ronnx/src/: main.rs
rr/: main.c  run.sh
show-AT_PHDR/: .gitignore  change_addr.lds  change_addr_norelro.lds  default_gcc.lds  default_gcc_norelro.lds  main.c  run.sh
size_of_state_dict/: main.py  run.sh
triton-trial/: .gitignore  build_and_install_triton.sh  run.sh  use_toriton.sh
unix_domain_socket/: client.c  run.sh  server.c
xz-vuln/: Dockerfile  README.md  run.sh
xz-vuln/xz-5.6.1/m4/: build-to-host.m4
z3shape/: README.md
z3shape/src/: main.rs
